Fixed padding and margins on page wrap

--- a/less/main.less
+++ b/less/main.less
@@ -68,7 +68,7 @@ li span {
 }
 
 .page-wrap {
-  margin-top: @navbar-height;
+  padding-top: @navbar-height;
 }
 
 .section-header {
@@ -709,7 +709,7 @@ footer {
   }
 
   #contact-form {
-    width: 900px;
+    width: 700px;
     margin: 30px auto;
     padding: 50px;
   }
